tests/valid_programs/extensions/simple_int_extension.duck
extend Int {
    fn test_to_str() -> String {
        return std::string::from_int(self);
    }
}

fn main() {
    let x: Int = 5;
    std::io::println(x@test_to_str());
}
