tests/errors/require_string_literal_give_dynamic_string.duck
fn main() {
    let str: "const string" = m();
}

fn m() -> String {
    return "dynamic string";
}
